--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><html><head>
     <meta charset="utf-8">
     <title>BDK WASM Example</title>
-    <link rel="stylesheet" href="/index-9e7a95798ca81a0e.css">
+    <link rel="stylesheet" href="/bdk-wasm-example/index-9e7a95798ca81a0e.css">
 
-<link rel="preload" href="/index-ef1a1093db2a102a_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
-<link rel="modulepreload" href="/index-ef1a1093db2a102a.js"></head>
-<body><script type="module">import init from '/index-ef1a1093db2a102a.js';init('/index-ef1a1093db2a102a_bg.wasm');</script></body></html>
+<link rel="preload" href="/bdk-wasm-example/index-ef1a1093db2a102a_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
+<link rel="modulepreload" href="/bdk-wasm-example/index-ef1a1093db2a102a.js"></head>
+<body><script type="module">import init from '/bdk-wasm-example/index-ef1a1093db2a102a.js';init('/bdk-wasm-example/index-ef1a1093db2a102a_bg.wasm');</script></body></html>
